# Restaurant-Management-System

./: .gitignore  .html  86_68_page.html  Employee_Clockin_Page.html  Employee_Main_Page.html  Employee_order_page.html  Employee_payments_page.html  Employee_table_page.html  Manager_comps_page.html  Manager_comps_report_page.html  Manager_discount_page.html  Manager_inventory_page.html  Manager_labor_page.html  Manager_promos_page.html  Manager_rem_employee_page.html  Manager_report_page.html  Manager_table_page.html  Manager_tool_page.html  Order_Menu.html  Order_Menu_Category.html  Pay_Menu.html  Play_Menu.html  Refill.html  cleanup.html  customer.html  customer_main_pg.html  kitchen.html  menu.html  menu_category.html  payment.html  rewards.html  set_pin.html  tien_refills.html
api/: Cargo.toml  Makefile  Rocket.toml  api.rs  coupons.rs  customers.rs  import.json  ingredients.rs  items.rs  notifications.rs  orders.rs  payment.rs  promotions.rs  schedules.rs  staff.rs  survey.rs  tables.rs  timeclock.rs
api/dump/Restaurant/: orders.bson  orders.metadata.json
api/dump/admin/: system.version.metadata.json
api/dump/test/: coupons.bson  coupons.metadata.json  customers.bson  customers.metadata.json  ingredients.bson  ingredients.metadata.json  items.bson  items.metadata.json  notifications.bson  notifications.metadata.json  orders.bson  orders.metadata.json  promotions.bson  promotions.metadata.json  schedules.bson  schedules.metadata.json  staff.bson  staff.metadata.json  tables.bson  tables.metadata.json  timeclock.bson  timeclock.metadata.json
(+395 files in other folders)
