[package]
name = "api"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
mongodb = "0.9.0"
[[bin]]
name = "api"
path = "api.rs"
