[package]
name = "api"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["mongodb_pool"]

[[bin]]
name = "api"
path = "api.rs"
